# pv

./: .gitignore  README  README.md  generate.sh
.github/: FUNDING.yml
autoconf/: Makefile.in  configure.in  header.in
autoconf/make/: depend.mk~  filelist.mk~  modules.mk~  package.mk  rules.mk  unreal.mk  vars.mk
autoconf/scripts/: benchmark.sh  depend.sh  index.sh  makemake.sh  po2table.sh  run-test.sh  run-valgrind.sh
doc/: ACKNOWLEDGEMENTS.md  DEVELOPERS.md  NEWS  NEWS.md  TODO  TODO.md  VERSION  lsm.in  quickref.1.in  release-checklist  spec.in
src/include/: config-aux.h  options.h  pv-internal.h  pv.h
src/main/: debug.c  help.c  main.c  options.c  remote.c  version.c
src/nls/: de.po  fr.po  pl.po  pt.po  pv.pot
src/pv/: cursor.c  display.c  file.c  loop.c  number.c  signal.c  state.c  string.c  transfer.c  watchpid.c
tests/: 000-cat  001-interval  002-rate  003-progress  004-timer  005-eta  005a-eta  006-fineta  006-ratecount  007-bytes  008-bytes  008-numeric  010-pipe  011-cksum  011-pipe  012-cksum  013-1mboundary  013-averagerate  014-1m_boundary_1  014-1mboundary2  016-cksumpipe  016-numeric-timer  017-numeric-bytes  017-numeric-timer  018-numeric-bytes  019-remote-format  020-remote-cksum  020-stop-at-size  021-stop-at-size  022-large-file  Bug_-_Display_length_at_magnitude_boundary_-_Bytes.sh  Bug_-_Display_length_at_magnitude_boundary_-_Rate.sh  Bug_-_Install_all_files.sh  Display_-_--average-rate.sh  Display_-_--bits.sh  Display_-_--buffer-percent.sh  Display_-_--bytes.sh  Display_-_--eta_-_plausible_values.sh  Display_-_--fineta_-_plausible_values.sh  Display_-_--last-written.sh  (+30 more)
